-
Bug
-
Resolution: Fixed
-
Major
-
None
-
None
-
3
-
9223372036854775807
This issue was created by maloo for S Buisson <sbuisson@ddn.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/f56ad3b7-3cb1-4525-8857-832acd3b7a67
test_0 failed with the following error:
Failed to export global yaml 139
Test session details:
clients: https://build.whamcloud.com/job/lustre-reviews/103051 - 5.14.21-150500.55.39-default
servers: https://build.whamcloud.com/job/lustre-reviews/103051 - 4.18.0-513.9.1.el8_lustre.x86_64
Many other sanity-lnet tests failed with this same error during this session.
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
sanity-lnet test_0 - Failed to export global yaml 139
- is related to
-
LU-10391 LNET: Support IPv6
-
- Resolved
-